// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/Broadcast/BroadcastInformation/Detail render 1`] = `
<React.Fragment>
  <Detail
    action={
      Array [
        Object {
          "children": "Edit Broadcast",
          "loading": false,
          "onClick": undefined,
          "variant": "ghost",
        },
        Object {
          "children": "Reject",
          "onClick": undefined,
          "variant": "ghost",
        },
        Object {
          "children": "Return",
          "ml": 16,
          "onClick": undefined,
          "variant": "ghost",
        },
        Object {
          "children": "Approve",
          "ml": 16,
          "onClick": undefined,
        },
      ]
    }
    breadcrumb={
      Array [
        Object {
          "label": "Broadcast Information",
          "url": "/broadcast-information",
        },
        Object {
          "label": "Detail",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "render": <StatusInformation
                data={
                  Object {
                    "broadcastInfo": Object {
                      "status": "need_approval",
                    },
                  }
                }
              />,
              "title": "",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "need_approval",
                  },
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "BROADCAST NAME",
                    "name": "broadcastInfo.broadcastName",
                  },
                  Object {
                    "grid": 12,
                    "label": "CONTACT GROUP",
                    "name": "broadcastInfo.contactGroup",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "MESSAGE",
                    "name": "broadcastInfo.message",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "broadcastInfo.createdDate",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "broadcastInfo.lastUpdate",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "SCHEDULE TIME",
                    "name": "broadcastInfo.scheduleTime",
                  },
                  Object {
                    "hidden": true,
                    "label": undefined,
                    "name": "broadcastInfo.note",
                  },
                ],
              },
              "title": "Broadcast Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "need_approval",
                  },
                },
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "attachment",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": true,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <Styled(MuiBox)
                sx={
                  Object {
                    "marginTop": 16,
                    "maxWidth": "100%",
                    "width": 360,
                  }
                }
              >
                <PreviewMessage
                  media={null}
                  message={Array []}
                  time=""
                />
              </Styled(MuiBox)>,
              "title": "Message Preview",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": "auto",
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <ListOfDetail />,
              "title": "List of Detail",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": 12,
            "xs": 12,
          },
          "hidden": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "need approval",
        "variant": "warning",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Approval
    caption=""
    description=""
    labelForm="Please describe the note.."
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
    title=""
  />
</React.Fragment>
`;

exports[`src/containers/Broadcast/BroadcastInformation/Detail render/data empty 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Broadcast Information",
          "url": "/broadcast-information",
        },
        Object {
          "label": "Detail",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "render": <StatusInformation
                data={null}
              />,
              "title": "",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": null,
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "BROADCAST NAME",
                    "name": "broadcastInfo.broadcastName",
                  },
                  Object {
                    "grid": 12,
                    "label": "CONTACT GROUP",
                    "name": "broadcastInfo.contactGroup",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "MESSAGE",
                    "name": "broadcastInfo.message",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "broadcastInfo.createdDate",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "broadcastInfo.lastUpdate",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "SCHEDULE TIME",
                    "name": "broadcastInfo.scheduleTime",
                  },
                  Object {
                    "hidden": true,
                    "label": undefined,
                    "name": "broadcastInfo.note",
                  },
                ],
              },
              "title": "Broadcast Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "attachment",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": true,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <Styled(MuiBox)
                sx={
                  Object {
                    "marginTop": 16,
                    "maxWidth": "100%",
                    "width": 360,
                  }
                }
              >
                <PreviewMessage
                  media={null}
                  message={Array []}
                  time=""
                />
              </Styled(MuiBox)>,
              "title": "Message Preview",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": "auto",
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <ListOfDetail />,
              "title": "List of Detail",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": 12,
            "xs": 12,
          },
          "hidden": false,
        },
      ]
    }
    search={null}
    status={null}
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Approval
    caption=""
    description=""
    labelForm="Please describe the note.."
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
    title=""
  />
</React.Fragment>
`;

exports[`src/containers/Broadcast/BroadcastInformation/Detail render/feature empty 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Broadcast Information",
          "url": "/broadcast-information",
        },
        Object {
          "label": "Detail",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "render": <StatusInformation
                data={
                  Object {
                    "broadcastInfo": Object {
                      "status": "need_approval",
                    },
                  }
                }
              />,
              "title": "",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "need_approval",
                  },
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "BROADCAST NAME",
                    "name": "broadcastInfo.broadcastName",
                  },
                  Object {
                    "grid": 12,
                    "label": "CONTACT GROUP",
                    "name": "broadcastInfo.contactGroup",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "MESSAGE",
                    "name": "broadcastInfo.message",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "broadcastInfo.createdDate",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "broadcastInfo.lastUpdate",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "SCHEDULE TIME",
                    "name": "broadcastInfo.scheduleTime",
                  },
                  Object {
                    "hidden": true,
                    "label": undefined,
                    "name": "broadcastInfo.note",
                  },
                ],
              },
              "title": "Broadcast Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "need_approval",
                  },
                },
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "attachment",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": true,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <Styled(MuiBox)
                sx={
                  Object {
                    "marginTop": 16,
                    "maxWidth": "100%",
                    "width": 360,
                  }
                }
              >
                <PreviewMessage
                  media={null}
                  message={Array []}
                  time=""
                />
              </Styled(MuiBox)>,
              "title": "Message Preview",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": "auto",
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <ListOfDetail />,
              "title": "List of Detail",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": 12,
            "xs": 12,
          },
          "hidden": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "need approval",
        "variant": "warning",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Approval
    caption=""
    description=""
    labelForm="Please describe the note.."
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
    title=""
  />
</React.Fragment>
`;

exports[`src/containers/Broadcast/BroadcastInformation/Detail render/status others 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Broadcast Information",
          "url": "/broadcast-information",
        },
        Object {
          "label": "Detail",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "render": <StatusInformation
                data={
                  Object {
                    "broadcastInfo": Object {
                      "status": "error",
                    },
                  }
                }
              />,
              "title": "",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "error",
                  },
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "BROADCAST NAME",
                    "name": "broadcastInfo.broadcastName",
                  },
                  Object {
                    "grid": 12,
                    "label": "CONTACT GROUP",
                    "name": "broadcastInfo.contactGroup",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "MESSAGE",
                    "name": "broadcastInfo.message",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "broadcastInfo.createdDate",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "broadcastInfo.lastUpdate",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "SCHEDULE TIME",
                    "name": "broadcastInfo.scheduleTime",
                  },
                  Object {
                    "hidden": true,
                    "label": undefined,
                    "name": "broadcastInfo.note",
                  },
                ],
              },
              "title": "Broadcast Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "error",
                  },
                },
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "attachment",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": true,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <Styled(MuiBox)
                sx={
                  Object {
                    "marginTop": 16,
                    "maxWidth": "100%",
                    "width": 360,
                  }
                }
              >
                <PreviewMessage
                  media={null}
                  message={Array []}
                  time=""
                />
              </Styled(MuiBox)>,
              "title": "Message Preview",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": "auto",
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <ListOfDetail />,
              "title": "List of Detail",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": 12,
            "xs": 12,
          },
          "hidden": false,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "error",
        "variant": "",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Approval
    caption=""
    description=""
    labelForm="Please describe the note.."
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
    title=""
  />
</React.Fragment>
`;

exports[`src/containers/Broadcast/BroadcastInformation/Detail render/status return 1`] = `
<React.Fragment>
  <Detail
    action={
      Array [
        Object {
          "children": "Edit Broadcast",
          "loading": false,
          "onClick": [MockFunction],
        },
      ]
    }
    breadcrumb={
      Array [
        Object {
          "label": "Broadcast Information",
          "url": "/broadcast-information",
        },
        Object {
          "label": "Detail",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "render": <StatusInformation
                data={
                  Object {
                    "broadcastInfo": Object {
                      "status": "returned",
                    },
                  }
                }
              />,
              "title": "",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "returned",
                  },
                },
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "BROADCAST NAME",
                    "name": "broadcastInfo.broadcastName",
                  },
                  Object {
                    "grid": 12,
                    "label": "CONTACT GROUP",
                    "name": "broadcastInfo.contactGroup",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "MESSAGE",
                    "name": "broadcastInfo.message",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "broadcastInfo.createdDate",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "broadcastInfo.lastUpdate",
                  },
                  Object {
                    "converter": [Function],
                    "grid": 12,
                    "label": "SCHEDULE TIME",
                    "name": "broadcastInfo.scheduleTime",
                  },
                  Object {
                    "hidden": false,
                    "label": "REASON OF RETURN",
                    "name": "broadcastInfo.note",
                  },
                ],
              },
              "title": "Broadcast Information",
              "type": "information",
            },
            Object {
              "hidden": true,
              "properties": Object {
                "data": Object {
                  "broadcastInfo": Object {
                    "status": "returned",
                  },
                },
                "schema": Array [
                  Object {
                    "label": "",
                    "name": "attachment",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": true,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <Styled(MuiBox)
                sx={
                  Object {
                    "marginTop": 16,
                    "maxWidth": "100%",
                    "width": 360,
                  }
                }
              >
                <PreviewMessage
                  media={null}
                  message={Array []}
                  time=""
                />
              </Styled(MuiBox)>,
              "title": "Message Preview",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": "auto",
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "render": <ListOfDetail />,
              "title": "List of Detail",
              "type": "custom",
            },
          ],
          "gridProps": Object {
            "md": 12,
            "xs": 12,
          },
          "hidden": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "returned",
        "variant": "danger",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Approval
    caption=""
    description=""
    labelForm="Please describe the note.."
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
    title=""
  />
</React.Fragment>
`;
